# simplematch

./: CHANGELOG.md  README.md  easymatch.py  pyproject.toml  simplematch.py  test_easymatch.py  test_simplematch.py
.github/: dependabot.yml
.github/workflows/: test.yml  tests.yml
simplematch/: converters.py  simplematch.py
