[tool.poetry]
name = "simplematch"
version = "0.1.0"
description = "Minimal, super readable string pattern matching."
authors = ["Thomas Feldmann <mail@tfeldmann.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tfeldmann/simplematch"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flit = "^3.2.0"
pytest = "^6.2.3"
tox = "^3.23.0"
mypy = "^0.812"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
