[tool.poetry]
name = "simplematch"
version = "1.4"
description = "Minimal, super readable string pattern matching."
authors = ["Thomas Feldmann <mail@tfeldmann.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tfeldmann/simplematch"
keywords = ["string", "pattern", "matching", "regular", "expression", "regex"]
classifiers = [
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
simplematch = "simplematch:simplematch_cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
pytest = "^7.4.2"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
